added modal with youtube video link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,29 @@
         </div>
     </div>
 
-    <p id="action-message">Click to make your move!</p>
+    <p id="action-message">Click your choice to make your move!</p>
+
+    <!-------------------- INSTRUCTIONS------------------------>
+
+    <!-- Trigger/Open The Modal -->
+    <button id="myBtn">Instructions</button>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>This is the classic rock paper scissors game with a twist inspired by the tv show: "The Big Bang Theory". </p>
+        <br>
+        <!-- <video width="640" height="480" controls>
+            <source src="https://www.youtube.com/watch?v=x5Q6-wMx-K8" type="video/mp4">
+                <source src="https://www.youtube.com/watch?v=x5Q6-wMx-K8" type="video/ogg"> -->
+                <a class="video" title="Test title" href="https://www.youtube.com/watch?v=x5Q6-wMx-K8" target="_blank">Open video explanation in YouTube</a>
+        <!-- </video> -->
+        </div>
+
+    </div>
 
 
 <script src="app.js" charset="utf-8"></script>
